obake/tests/ui/duplicate_version.rs
#[obake::versioned]
#[obake(version("0.1.0"))]
#[obake(version("0.1.0"))]
struct Foo {}

#[obake::versioned]
#[obake(version("0.1.0"))]
#[obake(version("0.1.0"))]
enum Bar {}

fn main() {}
